--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "react": "18.3.1",
     "react-native": "0.75.4",
+    "react-native-svg": "^15.9.0",
     "react-native-windows": "0.75.9"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@react-native/eslint-config": "0.75.4",
     "@react-native/metro-config": "0.75.4",
     "@react-native/typescript-config": "0.75.4",
+    "@rnx-kit/jest-preset": "^0.1.17",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
@@ -31,8 +33,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
-    "typescript": "5.0.4",
-    "@rnx-kit/jest-preset": "^0.1.17"
+    "typescript": "5.0.4"
   },
   "engines": {
     "node": ">=18"
