--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "windows": "npx @react-native-community/cli run-windows"
   },
   "dependencies": {
+    "@react-navigation/elements": "^2.1.6",
+    "@react-navigation/native": "^7.0.7",
+    "@react-navigation/native-stack": "^7.1.8",
     "react": "18.3.1",
     "react-native": "0.76.2",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.3.0",
     "react-native-windows": "0.76.2"
   },
   "devDependencies": {
@@ -31,10 +36,10 @@
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "metro-config": "^0.81.0",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
-    "typescript": "5.0.4",
-    "metro-config": "^0.81.0"
+    "typescript": "5.0.4"
   },
   "engines": {
     "node": ">=18"
